Cleanup logo carousel files

--- a/less/lobes-carousel.less
+++ b/less/lobes-carousel.less
@@ -22,7 +22,7 @@
 		perspective: 1000;
 		 .item {
 		  	width: 100%;
-		  	transform:none; //Override Bootstrap 3.2
+		  	transform:none; //Override Boostrap 3.2
 			> img {
 				padding: 0;
 				padding-top: 25px;
@@ -48,7 +48,7 @@
 			&.next.left,
 			&.prev.right    { 
 				left: initial;
-				transform:none; //Override Bootstrap 3.2
+				transform:none; //Override Boostrap 3.2
 				img{
 					transform: rotateX(0deg);
 					z-index: 2;
@@ -58,7 +58,7 @@
 			&.next,
 			&.active.right  {
 				left: initial;
-				transform:none; //Override Bootstrap 3.2
+				transform:none; //Override Boostrap 3.2
 				img{
 					transform: rotateX(-180deg);
 				}
@@ -67,7 +67,7 @@
 			&.prev,
 			&.active.left   {
 				left: initial;
-				transform:none; //Override Bootstrap 3.2
+				transform:none; //Override Boostrap 3.2
 				img{
 					transform: rotateX(180deg);
 				}
