Added all projects navbars and styles

--- a/less/theme.less
+++ b/less/theme.less
@@ -39,6 +39,12 @@
 	background-blend-mode: screen;
 }
 
+// Adding just a bit of whitespace between the navbar and the content
+@media(min-width:@screen-tablet) {
+  body > .container {
+    padding-top: @padding-large-vertical*2;
+  }
+}
 
 //
 // Headings
