Added missing variables import.

--- a/less/theme.less
+++ b/less/theme.less
@@ -10,6 +10,7 @@
  */
 
 @import "bootstrap.less";
+@import "variables.less";
 @import "colorPalette.less";
 @import "links.less";
 @import "lobes-buttons.less";
