Added ListenBrainz to the list of themes

--- a/less/lobes-navbars.less
+++ b/less/lobes-navbars.less
@@ -221,3 +221,8 @@ body.CoverArtArchive .navbar,
   @logo-width:245px;
   .navbar-variant(@coverartarchive,@logo-width);
 }
+body.ListenBrainz .navbar,
+.navbar.ListenBrainz{
+  @logo-width:245px;
+  .navbar-variant(@listenbrainz,@logo-width);
+}
