--- a/less/lobes-buttons.less
+++ b/less/lobes-buttons.less
@@ -148,3 +148,8 @@
   border-radius: 2px;
   padding: 6px 12px;
 }
+
+.modal-footer .btn + .btn {
+    margin-left: 5px;
+    margin-bottom: -0.15em;
+}
