migrate navbars to Bootstrap 4

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -116,6 +116,7 @@ $small-font-size:           85%;
 $table-cell-padding-sm:     5px;
 $table-cell-padding:        8px;
 $grid-gutter-width:         42px;
+$navbar-padding-y:          0.625rem;
 
 $container-max-widths: (
   sm: 540px + $grid-gutter-width,
