--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -2,4 +2,6 @@
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
+@import "./lobes-navbars.scss";
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,700|Sintony:200,400,700&subset=latin,latin-ext,cyrillic,cyrillic-ext);
