--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -3,5 +3,6 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
 @import "./lobes-navbars.scss";
+@import "./lobes-buttons.scss";
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,700|Sintony:200,400,700&subset=latin,latin-ext,cyrillic,cyrillic-ext);
