--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -2,6 +2,7 @@
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
+@import "./colorPalette.scss";
 @import "./lobes-navbars.scss";
 @import "./lobes-buttons.scss";
 
