--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,3 +7,8 @@
 @import "./lobes-buttons.scss";
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,700|Sintony:200,400,700&subset=latin,latin-ext,cyrillic,cyrillic-ext);
+
+.corporate-background{
+	background: url(../assets/background_tile.jpg) rgba($gray-200,60%);
+	background-blend-mode: screen;
+}
