migrate Lobes link styling
Removed a couple of lines because they are obsolete in BS4

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -3,6 +3,7 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
 @import "./colorPalette.scss";
+@import "./links.scss";
 @import "./lobes-navbars.scss";
 @import "./lobes-buttons.scss";
 
