--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -27,3 +27,56 @@
 .progress {
     margin-bottom: 20px;
 }
+
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+
+	small, .small {
+		font-size: 65%;
+	}
+
+    &.card-header {
+        margin-top: 0;
+    }
+}
+
+.jumbotron > h1 {
+    line-height: 1;
+    font-size: $h1-font-size * 1.75;
+}
+h1 > small {
+    color: $secondary;
+    font-weight: $headings-font-weight;
+    font-size: 0.65em;
+};
+
+h2 > small {
+    color: $secondary;
+    font-weight: $headings-font-weight;
+};
+
+.jumbotron  {
+    font-size: $font-size-base * 1.5;
+    font-weight: 200;
+}
+
+.jumbotron > p {
+    line-height: 1.4;
+}
+
+.card-header {
+    border-color: rgba($primary, 80%) $card-border-color;
+    border-bottom-width: 0.125rem;
+    line-height: 1.3;
+}
+
+.page-header {
+    margin: 40px 0 20px;
+    padding-bottom: 9px;
+    border-bottom: 1px solid $gray-400;
+}
+
+.list-group h1,h2,h3,h4,h5,h6 {
+    color: inherit;
+}
