--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -153,3 +153,15 @@ h2 > small {
 .blockquote > small::before {
     content: '\2014 \00A0';
 }
+
+pre {
+    display: block;
+    background-color: $gray-200;
+    word-break: break-all;
+    word-wrap: break-word;
+    overflow: visible;
+    white-space: pre-wrap;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    border: 1px solid $gray-400;
+}
