--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -165,3 +165,63 @@ pre {
     margin: 0 0 10px;
     border: 1px solid $gray-400;
 }
+
+.has-warning {
+    $val-base-color: darken($warning, 10%);
+
+    .form-control {
+        border-color: $val-base-color;
+
+        $val-box-shadow: 0 0 6px $val-base-color;
+        &:focus {
+            border-color: darken($val-base-color, 25%);
+            outline: 0;
+
+            @include box-shadow($input-box-shadow, $val-box-shadow);
+        }
+    }
+
+    label {
+        color: $val-base-color;
+    }
+}
+
+.has-error {
+    $val-base-color: $danger;
+
+    .form-control {
+        border-color: $val-base-color;
+
+        $val-box-shadow: 0 0 6px $val-base-color;
+        &:focus {
+            border-color: darken($val-base-color, 25%);
+            outline: 0;
+
+            @include box-shadow($input-box-shadow, $val-box-shadow);
+        }
+    }
+
+    label {
+        color: $val-base-color;
+    }
+}
+
+.has-success {
+    $val-base-color: $success;
+
+    .form-control {
+        border-color: $val-base-color;
+
+        $val-box-shadow: 0 0 6px $val-base-color;
+        &:focus {
+            border-color: darken($val-base-color, 25%);
+            outline: 0;
+
+            @include box-shadow($input-box-shadow, $val-box-shadow);
+        }
+    }
+
+    label {
+        color: $val-base-color;
+    }
+}
