add margin to bottom of table-responsive and list-group
This matches the appearance of old Lobes/BS3.

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -288,3 +288,11 @@ ul.hexagonBullet {
         border-color: $gray-400;
     }
 }
+
+.table-responsive {
+	margin-bottom: 15px;
+}
+
+.list-group {
+    margin-bottom: 20px;
+}
