--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -98,14 +98,13 @@ $btn-border-radius-sm:      0 !default;
 $btn-border-radius:         0 !default;
 $btn-border-width:          0px !default;
 $card-spacer-x:             0.8750rem !default;
-$card-spacer-y:             1.2500rem !default;
 $code-font-size:            90% !default;
 $font-size-base:            0.8750rem !default; // Default is 1rem ~ 16px - change to 0.875rem to get 14px
 $input-btn-focus-width:     6px !default;
-$input-btn-font-size:       $font-size-base * (12 / 14) !default;
-$input-btn-padding-x-lg:    2.0000rem !default;
-$input-btn-padding-x-sm:    0.8000rem !default;
-$input-btn-padding-x:       1.0000rem !default;
+// $input-btn-font-size:       $font-size-base * 0.8 !default;
+$btn-padding-x-lg:          2.0000rem !default;
+$btn-padding-x-sm:          0.8000rem !default;
+$btn-padding-x:             1.5000rem !default;
 $lead-font-size:            $font-size-base * 1.5 !default;
 $list-group-item-padding-x: 0.875rem !default;
 $logo-height:               30px !default; // Unfortunately necessary for accurate logo padding
@@ -117,6 +116,19 @@ $table-cell-padding-sm:     5px !default;
 $table-cell-padding:        8px !default;
 $grid-gutter-width:         42px !default;
 $navbar-padding-y:          0.625rem !default;
+$navbar-padding-horizontal: floor(calc($grid-gutter-width / 2));
+$paragraph-margin-bottom:   0.625rem !default;
+$card-spacer-y:             1.25rem;
+$card-spacer-x:             0.9375rem;
+$alert-padding-y:           0.9375rem;
+$alert-padding-x:           0.9375rem;
+
+$h1-font-size:                $font-size-base * 2.57 !default;
+$h2-font-size:                $font-size-base * 2.14 !default;
+$h3-font-size:                $font-size-base * 1.71 !default;
+$h4-font-size:                $font-size-base * 1.29 !default;
+$h5-font-size:                $font-size-base * 1.00 !default;
+$h6-font-size:                $font-size-base * 0.86 !default;
 
 $container-max-widths: (
   sm: 540px + $grid-gutter-width,
@@ -148,14 +160,13 @@ $code-color: #c7254e !default;
 
 $fa-font-path:        "../webfonts" !default;
 
+$input-btn-focus-width: 0;
 $input-btn-focus-color: $blue !default;
 $input-btn-focus-box-shadow: 0 0 $input-btn-focus-width $input-btn-focus-color !default;
 
 $input-focus-border-color: darken($blue, 10%) !default;
 
 $light: $gray-200 !default;
-
-$line-height-base: 1.428571429 !default;
 
 $link-color: $blue !default;
 $link-hover-color:      lighten($link-color, 12%) !default;
@@ -181,3 +192,18 @@ $list-group-link-heading-color:  #333 !default;
 $navbar-default-brand-color:               $orange !default;
 $navbar-inverse-brand-color:                lighten($purple,30%) !default;
 $nav-pills-active-link-hover-color:         $white !default;
+
+$navbar-nav-link-padding-x: 1rem !default;
+
+$dropdown-link-hover-bg: $primary;
+
+$dropdown-link-active-color:  $white;
+$dropdown-link-color:            $gray-800;
+$dropdown-link-hover-color:      $white;
+
+$navbar-toggler-font-size: 1rem;
+$navbar-toggler-padding-x: 0.625rem;
+
+$modal-lg: 900px;
+
+$badge-font-size: 12px;
