Don't apply visited link color to dropdown links

--- a/scss/links.scss
+++ b/scss/links.scss
@@ -4,7 +4,7 @@ a {
   &:focus {
     text-decoration: none;
   }
-  &:visited:not(.btn):not(.nav-link) {
+  &:visited:not(.btn):not(.nav-link):not(.dropdown-item) {
     color: $link-visited-color;
     &:hover {
       color: $link-visited-hover-color;
@@ -18,7 +18,7 @@ a {
   &:hover > .panel {
     color: $link-hover-color;
   }
-  &:visited:not(.btn):not(.nav-link) > .panel {
+  &:visited:not(.btn):not(.nav-link):not(.dropdown-item) > .panel {
     color: $link-visited-color;
     &:hover > .panel {
       color: $link-visited-hover-color;
