--- a/scss/colorPalette.scss
+++ b/scss/colorPalette.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 @mixin hexagon-color($color) {
   background-color: $color;
   &:before {
@@ -11,10 +13,10 @@
 @mixin colour-palette($color, $darken: 15%, $lighten: $darken) {
   @include hexagon-color($color);
   &.dark {
-    @include hexagon-color(darken($color, $darken));
+    @include hexagon-color(color.adjust($color, $lightness: -$darken, $space: hsl));
   }
   &.light {
-    @include hexagon-color(lighten($color, $lighten));
+    @include hexagon-color(color.adjust($color, $lightness: $lighten, $space: hsl));
   }
 }
 
