Fix outline buttons styles
+ add them to the kitchen sink

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -99,6 +99,7 @@ $btn-border-radius-lg:      0 !default;
 $btn-border-radius-sm:      0 !default;
 $btn-border-radius:         0 !default;
 $btn-border-width:          0px !default;
+$btn-outline-border-width:  1px !default;
 $card-spacer-x:             0.8750rem !default;
 $code-font-size:            90% !default;
 $font-size-base:            0.8750rem !default; // Default is 1rem ~ 16px - change to 0.875rem to get 14px
