--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -254,13 +254,10 @@ ul.hexagonBullet {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.btn-outline-primary,.btn-outline-secondary,.btn-outline-success,.btn-outline-warning,.btn-outline-danger,.btn-outline-info,.btn-outline-light,.btn-outline-dark {
-    border-width: 1px;
-
-    &:disabled {
-        color: $gray-400;
-        border-color: $gray-400;
-    }
+@each $color, $value in $theme-colors {
+  .btn-outline-#{$color} {
+    --bs-btn-border-width: #{$btn-outline-border-width};
+  }
 }
 
 .table-responsive {
@@ -274,7 +271,3 @@ ul.hexagonBullet {
 a:visited.dropdown-item {
 	color: $gray-800 !important;
 }
-
-// .btn-primary {
-//   --bs-btn-color: $colors.white;
-// }
