Adjust color contrast ratio to allow white button text

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -79,6 +79,8 @@ $theme-colors: (
   "danger":     $danger
 ) !default;
 
+$min-contrast-ratio: 2.5;
+
 // ------------------ //
 // Bootstrap Switches //
 // ------------------ //
